final draft before first submission

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1777,6 +1777,19 @@ Measuring Ecological Statistics},
  year = {2012}
 }
 
+@article{Orn2022,
+ author = {Orn, Garðarsson Garðar and Boem, Francesca and Toni, Laura},
+ doi = {https://doi.org/10.1016/j.ifacol.2022.07.203},
+ issn = {2405-8963},
+ journal = {IFAC-PapersOnLine},
+ number = {6},
+ pages = {661-666},
+ title = {Graph-Based Learning for Leak Detection and Localisation in Water Distribution Networks*},
+ url = {https://doi.org/https://doi.org/10.1016/j.ifacol.2022.07.203},
+ volume = {55},
+ year = {2022}
+}
+
 @article{Ortega2018,
  author = {Ortega, Antonio and Frossard, Pascal and Kovačević, Jelena and Moura, José M. F. and Vandergheynst, Pierre},
  doi = {10.1109/JPROC.2018.2820126},
@@ -2834,4 +2847,17 @@ multilayer complex systems},
  url = {https://doi.org/10.1109/ICASSP.2012.6288515},
  volume = {},
  year = {2012}
+}
+
+@article{Xiao2021b,
+  doi = {10.1007/s00138-021-01251-0},
+  url = {https://doi.org/10.1007/s00138-021-01251-0},
+  year = {2021},
+  month = nov,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {33},
+  number = {1},
+  author = {Xiao, Shunxin and Wang, Shiping and Dai, Yuanfei and Guo, Wenzhong},
+  title = {Graph neural networks in node classification: survey and evaluation},
+  journal = {Machine Vision and Applications}
 }
