--- a/Front & Back Matter/abbreviations.tex
+++ b/Front & Back Matter/abbreviations.tex
@@ -2,21 +2,35 @@
 
 \setstretch{1.5} % Set the line spacing to 1.5, this makes the following tables easier to read
 
+\small
+
 \lhead{\emph{Abbreviations}} % Set the left side page header to "Abbreviations"
-\listofsymbols{ll} % Include a list of Abbreviations (a table of two columns)
+\listofsymbols{l@{\hskip 1.5cm}l} % Include a list of Abbreviations (a table of two columns)
 {
-GSP & Graph Signal Processing \\
-GFT & Graph Fourier Transform \\
-IGFT & Inverse Graph Fourier Transform \\
-GSR & Graph Signal Reconstruction \\
-KGR & Kernel Graph Regression \\
-RNC & Regression with Network Cohesion \\
-GLS & Generalised Least Squares \\
-DCT & Discrete Cosine Transform \\
-FCT & Fast Cosine Transform \\
-FFT & Fast Fourier Transform \\
-PSD & Positive Semi-Definite \\
-SIM & Stationary Iterative Method \\
+ASP & Algebraic Signal Processing \\
 CGM & Conjugate Gradient Method \\
-SNR & Signal to Noise Ratio 
+CNN & Convolutional Neural Network \\
+DFT/DCT/DST & Discrete Fourier/Cosine/Sine Transform \\
+DSP & Digital Signal Processing \\
+FFT/FCT/FST & Fast Fourier/Cosine/Sine Transform \\
+GFT & Graph Fourier Transform \\
+GLS & Generalised Least Squares \\
+GNN & Graph Neural Network\\
+GSP & Graph Signal Processing \\
+GSR & Graph Signal Reconstruction \\
+IGFT & Inverse Graph Fourier Transform \\
+IRLS & Iteratively Reweighted Least Squares \\
+JIT & Just in Time \\
+KGR & Kernel Graph Regression \\
+MAP & Maximum A Posteriori \\
+MWGSP & Multiway Graph Signal Processing \\
+PCA & Principal Component Analysis \\
+PSD & Positive Semi-Definite \\
+RKHS & Reproducing Kernel Hilbert Space \\
+RMSE & Root Mean Square Error \\
+RNC & Regression with Network Cohesion \\
+SGT & Spectral Graph Theory \\
+SIM & Stationary Iterative Method \\
+SNR & Signal to Noise Ratio \\
+WFL/SFL & Weak/Strong Filter Limit \\
 }
