--- a/Front & Back Matter/symbols.tex
+++ b/Front & Back Matter/symbols.tex
@@ -29,48 +29,47 @@ $\beta$  & A hyperparameter characterising a graph filter \\
 $\gamma$ & A precision parameter \\
 $\lambda$ & An eigenvalue \textit{or} ridge regression penalty parameter \\
 $\mu$ & The mean of a random variable \\
-$\theta$ & AR(1) autocorrelation parameter \\
 $\sigma^2$ & The variance of a random variable \\[0.5cm]
 
 \newpage
 
-\textbf{Matrices} \\[0.2cm]
+\textbf{Matrix Operators} \\[0.2cm]
 
 $\A$  & The graph adjacency matrix \\
 $\D$  & A diagonal matrix \\
-$\E$  & The prediction residuals \\
-$\F$  & A predicted graph signal \\ 
-$\G$  & A spectral scaling matrix \\
 $\HH$ & A graph filter \textit{or} Hessian matrix \\
 $\I_N$  & The $(N \times N)$ identity matrix \\
 $\OO_N$  & An $(N \times N)$ matrix of ones \\
 $\K$  & A kernel (Gram) matrix \\
 $\LL$ & The graph Laplacian \\
-$\Ss$ & A binary selection matrix \\
+$\M$ & SIM update matrix \\
 $\U$  & Laplacian eigenvector matrix \\
 $\V$  & Kernel eigenvector matrix \\
-$\X$  & Data matrix of explanatory variables \\
-$\Y$  & (Partially) observed graph signal  \\
 $\LAM$ & A diagonal eigenvalue matrix \\
 $\SIG$ & A covariance matrix\\
-$\PHI, \PSI$ & Generic eigenvector matrices \\
-$\OMEGA$ & Log marginal variance matrix \\[0.5cm]
+$\PHI$ & A matrix of basis functions \\[0.5cm]
 
+\textbf{Vectors/matrices/tensors} \\[0.2cm]
 
-\textbf{Vectors/tensors} \\[0.2cm]
-
+$\e, \E, \Et$  & The prediction residuals \\
+$\f, \F, \Ft$  & A predicted graph signal \\ 
+$\g, \G, \Gt$  & A spectral scaling vector/matrix/tensor \\
+$\jj, \J, \Jt$ & Alternative spectral scaling vector/matrix/tensor  \\
+$\Mt$ & Latent probability tensor \\
+$\mathbf{q}, \Q, \Qt$ &  Alternative binary selection tensor \\
+$\s, \Ss, \St$ & A binary selection signal \\
+$\x, \X, \Xt$  & Data matrix of explanatory variables \\
+$\y, \Y, \Yt$  & (Partially) observed graph signal  \\
+$\z, \Z, \Zt$  & Signal of spectral components  \\
+$\omega, \OMEGA, \Omegat$ & Log marginal variance signal \\
 $\mathbf{1}_N$ &  A length-$N$ vector of ones \\
-$\e$ &  The prediction residuals \\
 $\e_i$ &  The $i$-th unit basis vector \\
-$\f$ &  The predicted graph signal \\
-$\s$ &  A binary selection vector/tensor \\
-$\x$ & A vector of explanatory variables \\
-$\y$ & The observed graph signal \\
+$\w$ & A vector of regression coefficients \\
 $\alphaa$ & A flexible intercept vector/tensor \\
-$\betaa$ & A graph filter parameter vector \textit{or} vector of regression coefficients \\
+$\betaa$ & A graph filter parameter vector \\
 $\thetaa$ & A aggregated coefficient vector $[ \alphaa^\top, \, \betaa^\top ]^\top$ \\[0.5cm]
 
-
+\newpage
 
 \textbf{Functions} \\[0.2cm]
 
