--- a/Front & Back Matter/abstract.tex
+++ b/Front & Back Matter/abstract.tex
@@ -11,7 +11,7 @@
  
 \addtocontents{toc}{\vspace{1em}} 
 
-Graph Signal Processing (GSP) is a rapidly evolving field that combines ideas from spectral graph theory and classical signal processing to analyse and manipulate data residing on an irregular domain. In this thesis, we contribute several advancements to GSP theory, in particular, with regard to Bayesian reconstruction and regression techniques for multivariate graph signals. The first topic we consider is the reconstruction of signals existing on two-dimensional Cartesian product graphs, in the presence of noise and arbitrary missing data. Using numerical methods and the properties of the Kronecker product, we derive two efficient algorithms for computing the posterior mean and show how the optimal choice of technique depends on the model hyperparameters and sparsity of the input data. We then build on this by applying similar algorithms to solve several multivariate graph signal regression models. In particular, we generalise prior work on Kernel Graph Regression (KGR) and Regression with Network Cohesion (RNC), which are relevant when the explanatory variables are exogenous and endogenous respectively, by allowing for arbitrary patterns of missing data in the input signal. Following this, we adapt the reconstruction and regression methods developed prior in the thesis to the Multiway Graph Signal Processing (MWGSP) paradigm. MWGSP is an emerging sub-field that focuses on tensor-valued graph signals, where each axis is described by a unique graph topology. In order to help write effective and efficient MWGSP algorithms, we also present the PyKronecker library which creates an abstracted API for manipulating high-dimensional Kronecker-structured matrices. The next topic we consider is techniques for computing the posterior covariance of our models. First, we propose several algorithms for estimating the marginal posterior variance and compare them to other alternative standard techniques. Combined with an active learning strategy, we demonstrate that our procedure can generate greatly superior estimates, with $R^2 > 0.95$. We also derive an efficient algorithm for sampling directly from the posterior whilst avoiding computationally expensive MCMC-based approaches, using a technique known as perturbation optimisation. Finally, we develop new models that generalise our previous reconstruction and regression models to accommodate binary and categorical tensor graph signals. Each topic in this thesis is also accompanied by a real-world case study to corroborate the utility of the methods or demonstrate their correctness. 
+Graph Signal Processing (GSP) is a rapidly evolving field that combines ideas from spectral graph theory and classical signal processing to analyse and manipulate data residing on an irregular domain. In this thesis, we contribute several advancements to GSP theory, in particular, with regard to Bayesian reconstruction and regression techniques for multivariate graph signals. The first topic we consider is the reconstruction of signals existing on two-dimensional Cartesian product graphs, in the presence of noise and arbitrary missing data. Using numerical methods and the properties of the Kronecker product, we derive two efficient algorithms for computing the posterior mean and show how the optimal choice of technique depends on the model hyperparameters and sparsity of the input data. We then build on this by applying similar algorithms to solve several multivariate graph signal regression models. In particular, we generalise prior work on Kernel Graph Regression (KGR) and Regression with Network Cohesion (RNC), which are relevant when the explanatory variables are exogenous and endogenous respectively, by allowing for arbitrary patterns of missing data in the input signal. Following this, we adapt the reconstruction and regression methods developed prior in the thesis to the Multiway Graph Signal Processing (MWGSP) paradigm. MWGSP is an emerging sub-field that focuses on tensor-valued graph signals, where each axis is described by a unique graph topology. In order to help write effective and efficient MWGSP algorithms, we also present the PyKronecker library which creates an abstracted API for manipulating high-dimensional Kronecker-structured matrices. The next topic we consider is techniques for computing the posterior covariance of our models. First, we propose several algorithms for estimating the marginal posterior variance and compare them to other alternative standard techniques. Combined with an active learning strategy, we demonstrate that our procedure can generate superior estimates, with $R^2 > 0.95$. We also derive an efficient algorithm for sampling directly from the posterior whilst avoiding computationally expensive MCMC-based approaches, using a technique known as perturbation optimisation. Finally, we develop new models that generalise our previous reconstruction and regression models to accommodate binary and categorical tensor graph signals. Each topic in this thesis is also accompanied by a real-world case study to corroborate the utility of the methods or demonstrate their theoretical properties. 
 
 
 \clearpage % Start a new page
