--- a/Front & Back Matter/acknowlegements.tex
+++ b/Front & Back Matter/acknowlegements.tex
@@ -2,13 +2,11 @@
 
 \acknowledgements{\addtocontents{toc}{\vspace{1em}} % Add a gap in the Contents, for aesthetics
 
-First and foremost, I want to thank my supervisors Professors Mike Chantler and Gareth Peters. I will be forever grateful for their constant support and guidance throughout this process and consider myself truly fortunate to have had the opportunity to work with and learn from them. In addition to their invaluable academic guidance, they also taught me the value of patience, perseverance and kindness. 
+First and foremost, I want to thank my supervisors Professors Mike Chantler and Gareth Peters. I am very grateful for their steadfast support and guidance throughout this process and consider myself truly fortunate to have worked with and learned from such insightful and dedicated individuals. In addition to their invaluable academic guidance, they also taught me the value of patience, perseverance and kindness. 
 
 I would also like to thank our partners at NatWest, in particular Stuart Wray, Sebastien Geroult, and Beverley O'Neill. Their consistent support both professionally and personally was deeply appreciated and is a testament to the culture within the company. This process would also not have been possible without the generous financial support of the company at large, for which I am immensely grateful. 
 
-Thank you also to my friends, who keep me sane. Special mention must go to Cole van Jaarsveldt, with whom it's been a pleasure to live with and learn alongside. 
-
-Finally, I would like to thank my family. Their love is what keeps me going and, to them, I owe more than words can express.
+Thank you also to my friends, who keep me sane. Special mention must go to my fellow student Cole van Jaarsveldt, with whom it's been a pleasure to work and learn alongside. Finally, I would like to thank my family. Their love is what keeps me going and, to them, I owe more than words can express.
 
 }
 \clearpage 
