--- a/Front & Back Matter/identities.tex
+++ b/Front & Back Matter/identities.tex
@@ -3,14 +3,24 @@
 \lhead{\emph{Identities}} % Set the left side page header to "Symbols"
 
 
-\listofidentities{lcc} {
+\listofidentities{
 
-1 & $\vecc{\A\X\B}$ & $(\B^{\top} \otimes \A )\,\vecc{\X} $\\
-2 & $\tr{\A^{\top}\B}$ & $\vecc{\A}^{\top}\vecc{\B}$ \\
-3 & $\A\C \otimes \B\D $ & $(\A \otimes \B)(\C \otimes \D)$ \\
-4 & $(\A \otimes \B)^{-1}$ & $\A^{-1} \otimes \B^{-1}$ \\
-5 & $\tr{\X^{\top}\A\Y\B}$ & $\vecc{\X}^{\top}(\B^{\top} \otimes \A )\,\vecc{\Y}$\\
-6 & $\vecc{\J \circ \Y} $ & $\text{diag} \big( \vecc{\J} \big) \vecc{\Y}$  \\
-9 & $\text{diag}^{-1} \big( \A\, \text{diag}(\mathbf{x}) \,\B \big)$  & $(\B^{\top} \circ \A) \, \mathbf{x}$ \\
+\begin{table}[h]
+    \vspace*{0.5cm}
+    \centering
+    \setlength{\tabcolsep}{10pt}
+    \def\arraystretch{1.8}
+    \begin{tabular}{@{}c c@{}}
+        \toprule
+        $\vecc{\A\X\B}$ & $(\B^{\top} \otimes \A )\,\vecc{\X} $\\
+        $\tr{\A^{\top}\B}$ & $\vecc{\A}^{\top}\vecc{\B}$ \\
+        $\A\C \otimes \B\D $ & $(\A \otimes \B)(\C \otimes \D)$ \\
+        $(\A \otimes \B)^{-1}$ & $\A^{-1} \otimes \B^{-1}$ \\
+        $\tr{\X^{\top}\A\Y\B}$ & $\vecc{\X}^{\top}(\B^{\top} \otimes \A )\,\vecc{\Y}$\\
+        $\vecc{\J \circ \Y} $ & $\text{diag} \big( \vecc{\J} \big) \vecc{\Y}$  \\
+        $\text{diag}^{-1} \big( \A\, \text{diag}(\mathbf{x}) \,\B \big)$  & $(\B^{\top} \circ \A) \, \mathbf{x}$ \\
+        \bottomrule
+    \end{tabular}
+\end{table}
 
 }
