--- a/Front & Back Matter/symbols.tex
+++ b/Front & Back Matter/symbols.tex
@@ -47,6 +47,7 @@ $\U$  & Laplacian eigenvector matrix \\
 $\V$  & Kernel eigenvector matrix \\
 $\LAM$ & A diagonal eigenvalue matrix \\
 $\SIG$ & A covariance matrix\\
+$\PSI$ & A preconditioning matrix\\
 $\PHI$ & A matrix of basis functions \\[0.5cm]
 
 \textbf{Vectors/matrices/tensors} \\[0.2cm]
@@ -56,15 +57,15 @@ $\f, \F, \Ft$  & A predicted graph signal \\
 $\g, \G, \Gt$  & A spectral scaling vector/matrix/tensor \\
 $\jj, \J, \Jt$ & Alternative spectral scaling vector/matrix/tensor  \\
 $\Mt$ & Latent probability tensor \\
-$\mathbf{q}, \Q, \Qt$ &  Alternative binary selection tensor \\
-$\s, \Ss, \St$ & A binary selection signal \\
-$\x, \X, \Xt$  & Data matrix of explanatory variables \\
+$\s, \Ss, \St$ & A binary selection vector/matrix/tensor \\
+$\mathbf{q}, \Q, \Qt$ &  Alternative binary selection vector/matrix/tensor \\
+$\x, \X, \Xt$  & Vector/matrix/tensor of explanatory variables \\
 $\y, \Y, \Yt$  & (Partially) observed graph signal  \\
 $\z, \Z, \Zt$  & Signal of spectral components  \\
 $\omega, \OMEGA, \Omegat$ & Log marginal variance signal \\
 $\mathbf{1}_N$ &  A length-$N$ vector of ones \\
 $\e_i$ &  The $i$-th unit basis vector \\
-$\w$ & A vector of regression coefficients \\
+$\w, \W$ & A vector/matrix of regression coefficients \\
 $\alphaa$ & A flexible intercept vector/tensor \\
 $\betaa$ & A graph filter parameter vector \\
 $\thetaa$ & A aggregated coefficient vector $[ \alphaa^\top, \, \betaa^\top ]^\top$ \\[0.5cm]
