--- a/Front & Back Matter/title.tex
+++ b/Front & Back Matter/title.tex
@@ -1,13 +1,10 @@
 \begin{titlepage}
 
     \begin{center}
-    
-        \textsc{\LARGE \univname}\\[1.5cm] % University name
-        \textsc{\Large Doctoral Thesis}\\[0.5cm] % Thesis type
         
         \HRule \\[0.4cm] % Horizontal line
         {\huge \bfseries \ttitle}\\[0.4cm] % Thesis title
-        \HRule \\[1.5cm] % Horizontal line
+        \HRule \\[1cm] % Horizontal line
         
         \begin{minipage}{0.4\textwidth}
         \begin{flushleft} \large
@@ -21,18 +18,24 @@
         \emph{Supervisors:} \\
         \supname % Supervisor name - remove the \href bracket to remove the link  
         \end{flushright}
-        \end{minipage}\\[3cm]
+        \end{minipage}\\[4cm]
         
-        \large \textit{A thesis submitted in fulfilment of the requirements\\ for the degree of PhD. }\\[0.3cm] % University requirement text
-        \textit{in the}\\[0.4cm]
+        \large \textit{Submitted for the degree of Doctor of Philosophy}\\[0.5cm] % University requirement text
+
         %\groupname\\
+
+        \textsc{\LARGE \univname}\\[0.5cm] % University name
         
-        \deptname\\[2cm] % Research group name and department name
+        \deptname\\[0.5cm] % Research group name and department name
         
-        {\large \today}\\[1cm] % Date
+        {\large \today}\\[4cm] % Date
         \includegraphics[width=6cm]{./Figures/HWUlogo.jpg} % University/department logo - uncomment to place it
-        
+
         \vfill
+
+        \small{The copyright in this thesis is owned by the author. Any quotation from the thesis or use of any of the information contained in it must acknowledge this thesis as the source of the quotation or information.}
+        
+        % \vfill
 
     \end{center}
     
