--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1294,6 +1294,18 @@ https://doi.org/10.1137/0117062},
  year = {2012}
 }
 
+@article{Jiang2021,
+ author = {Jiang, Junzheng and Feng, Hairong and Tay, David B. and Xu, Shuwen},
+ doi = {10.1109/TSP.2021.3064984},
+ journal = {IEEE Transactions on Signal Processing},
+ number = {},
+ pages = {1968-1982},
+ title = {Theory and Design of Joint Time-Vertex Nonsubsampled Filter Banks},
+ url = {https://doi.org/10.1109/TSP.2021.3064984},
+ volume = {69},
+ year = {2021}
+}
+
 @misc{Kalofolias2016,
  archiveprefix = {arXiv},
  author = {Kalofolias, Vassilis},
@@ -2569,6 +2581,18 @@ and Warmuth, Manfred K.},
  year = {2016}
 }
 
+@article{Wang2016b,
+ author = {Xiaohan Wang and Jiaxuan Chen and Yuantao Gu},
+ doi = {https://doi.org/10.1016/j.sigpro.2016.05.037},
+ issn = {0165-1684},
+ journal = {Signal Processing},
+ pages = {119-129},
+ title = {Local measurement and reconstruction for noisy bandlimited graph signals},
+ url = {https://doi.org/https://doi.org/10.1016/j.sigpro.2016.05.037},
+ volume = {129},
+ year = {2016}
+}
+
 @article{Wang2022,
  author = {Wang, Yuanbo and Ahsan, Unaiza and Li, Hanyan and Hagen, Matthew },
  doi = {10.1561/0600000097},
@@ -2642,6 +2666,19 @@ https://doi.org/10.1177/00045632211050531},
  title = {Anomalous IoT Sensor Data Detection: An Efficient Approach Enabled by Nonlinear Frequency-Domain Graph Analysis},
  url = {https://doi.org/10.1109/JIOT.2020.3024763},
  volume = {8},
+ year = {2021}
+}
+
+@article{Xiao2021b,
+ author = {Xiao, Shunxin and Wang, Shiping and Dai, Yuanfei and Guo, Wenzhong},
+ doi = {10.1007/s00138-021-01251-0},
+ journal = {Machine Vision and Applications},
+ month = {November},
+ number = {1},
+ publisher = {Springer Science and Business Media {LLC}},
+ title = {Graph neural networks in node classification: survey and evaluation},
+ url = {https://doi.org/10.1007/s00138-021-01251-0},
+ volume = {33},
  year = {2021}
 }
 
@@ -2819,7 +2856,7 @@ multilayer complex systems},
  number = {16},
  pages = {9401-9421},
  title = {Distributed reconstruction of time-varying graph signals via a modified Newton's method},
- url = {https://doi.org/https://doi.org/10.1016/j.jfranklin.2022.08.059},
+ url = {https://doi.org/10.1016/j.jfranklin.2022.08.059},
  volume = {359},
  year = {2022}
 }
@@ -2847,17 +2884,4 @@ multilayer complex systems},
  url = {https://doi.org/10.1109/ICASSP.2012.6288515},
  volume = {},
  year = {2012}
-}
-
-@article{Xiao2021b,
-  doi = {10.1007/s00138-021-01251-0},
-  url = {https://doi.org/10.1007/s00138-021-01251-0},
-  year = {2021},
-  month = nov,
-  publisher = {Springer Science and Business Media {LLC}},
-  volume = {33},
-  number = {1},
-  author = {Xiao, Shunxin and Wang, Shiping and Dai, Yuanfei and Guo, Wenzhong},
-  title = {Graph neural networks in node classification: survey and evaluation},
-  journal = {Machine Vision and Applications}
 }
