--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -716,6 +716,18 @@ and Frossard, Pascal},
  year = {2017}
 }
 
+@book{Feller1968,
+ author = {Feller, W.},
+ isbn = {9788126518050},
+ lccn = {68117088},
+ number = {v. 2},
+ publisher = {John Wiley \& sons.},
+ series = {Wiley series in probability and mathematical statistics},
+ title = {An Introduction to Probability Theory and Its Applications: Volume I},
+ url = {https://books.google.co.uk/books?id=A6J4AGUwrPwC},
+ year = {1968}
+}
+
 @article{Fiedler1973,
  author = {Fiedler, Miroslav},
  doi = {10.21136/CMJ.1973.101168},
@@ -938,6 +950,18 @@ parameters},
  year = {2018}
 }
 
+@article{Gribonval2011,
+ author = {Gribonval, Rémi},
+ doi = {10.1109/TSP.2011.2107908},
+ journal = {IEEE Transactions on Signal Processing},
+ number = {5},
+ pages = {2405-2410},
+ title = {Should Penalized Least Squares Regression be Interpreted as Maximum A Posteriori Estimation?},
+ url = {https://doi.org/10.1109/TSP.2011.2107908},
+ volume = {59},
+ year = {2011}
+}
+
 @article{Grote1997,
  author = {Grote, Marcus J. and Huckle, Thomas},
  doi = {10.1137/S1064827594276552},
@@ -1129,6 +1153,18 @@ https://doi.org/10.1137/0117062},
  url = {https://doi.org/10.1109/JSTSP.2016.2600859},
  volume = {10},
  year = {2016}
+}
+
+@article{Huang2018,
+ author = {Huang, Weiyu and Bolton, Thomas A. W. and Medaglia, John D. and Bassett, Danielle S. and Ribeiro, Alejandro and Van De Ville, Dimitri},
+ doi = {10.1109/JPROC.2018.2798928},
+ journal = {Proceedings of the IEEE},
+ number = {5},
+ pages = {868-885},
+ title = {A Graph Signal Processing Perspective on Functional Brain Imaging},
+ url = {https://doi.org/10.1109/JPROC.2018.2798928},
+ volume = {106},
+ year = {2018}
 }
 
 @article{Huckel1931,
@@ -2189,7 +2225,7 @@ green bond instrument returns},
 }
 
 @article{Sardellitti2017,
- author = {Sardellitti, Stefania and Barbarossa, Sergio and Lorenzo, Paolo Di},
+ author = {Sardellitti, Stefania and Barbarossa, Sergio and Di Lorenzo, Paolo},
  doi = {10.1109/JSTSP.2017.2726979},
  journal = {IEEE Journal of Selected Topics in Signal Processing},
  number = {6},
@@ -2221,6 +2257,20 @@ green bond instrument returns},
  title = {{Learning with Kernels: Support Vector Machines, Regularization, Optimization, and Beyond}},
  url = {https://doi.org/10.7551/mitpress/4175.001.0001},
  year = {2018}
+}
+
+@inbook{Searle1997,
+ author = {Searle, S. R.},
+ booktitle = {Linear Models},
+ chapter = {2},
+ doi = {https://doi.org/10.1002/9781118491782.ch2},
+ eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/9781118491782.ch2},
+ isbn = {9781118491782},
+ pages = {31-74},
+ publisher = {John Wiley \& Sons, Ltd},
+ title = {Distributions and Quadratic Forms},
+ url = {https://doi.org/https://doi.org/10.1002/9781118491782.ch2},
+ year = {1997}
 }
 
 @article{Shafipour2019,
