--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1253,13 +1253,16 @@ https://doi.org/10.1137/0117062},
  year = {2017}
 }
 
-@misc{Isufi2022,
- archiveprefix = {arXiv},
- author = {Isufi, Elvin and Gama, Fernando and Shuman, David I. and Segarra, Santiago},
- eprint = {2211.08854},
- primaryclass = {eess.SP},
+@article{Isufi2024,
+ author = {Isufi, Elvin and Gama, Fernando and Shuman, David I and Segarra, Santiago},
+ doi = {10.1109/TSP.2024.3349788},
+ journal = {IEEE Transactions on Signal Processing},
+ number = {},
+ pages = {1-32},
  title = {Graph Filters for Signal Processing and Machine Learning on Graphs},
- year = {2022}
+ url = {https://doi.org/10.1109/TSP.2024.3349788},
+ volume = {},
+ year = {2024}
 }
 
 @inproceedings{Itani2021,
@@ -1493,6 +1496,15 @@ https://doi.org/10.1137/07070111X},
  url = {https://doi.org/10.1111/rssb.12554},
  volume = {84},
  year = {2022}
+}
+
+@inproceedings{Lehoucq1998,
+ author = {Lehoucq, Richard B. and Sorensen, Danny C. and Yang, Chao},
+ booktitle = {Software, environments, tools},
+ doi = {10.1137/1.9780898719628},
+ title = {{ARPACK users' guide - solution of large-scale eigenvalue problems with implicitly restarted Arnoldi methods}},
+ url = {https://doi.org/10.1137/1.9780898719628},
+ year = {1998}
 }
 
 @inproceedings{LeMagoarou2016,
@@ -1809,7 +1821,7 @@ Measuring Ecological Statistics},
  author = {{ONS}},
  howpublished = {\url{https://www.data.gov.uk/dataset/e73c1990-ad5d-4184-8fb1-b474b94918ba/local-authority-districts-december-2019-boundaries-uk-buc}},
  note = {Accessed: 2023-05-30},
- title = {Local Authority Districts (December 2019) Boundaries UK BUC},
+ title = {{Local Authority Districts (December 2019) Boundaries UK BUC}},
  year = {2019}
 }
 
